# Prosaic-at-best

./: .gitignore  CMakeLists.txt  README.md
Fighting game thing/: .gitattributes  ACT LIST.txt  Fighting game thingy.cbp  Fighting game thingy.depend  Fighting game thingy.layout  main.cpp  shader.frag
Fighting game thing/src/: main.cpp
Project/: Project.cbp  Project.depend  Project.layout  main.cpp  map.txt
src/: main.cpp  shader.frag
src/assets/shaders/: darkscreen.frag  shader.frag
